[tool.poetry]
name = "history-rag"
version = "0.1.0"
description = ""
authors = ["ACGMN <ootopoo@vip.qq.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
llama-index = ">=0.9.39"
pymilvus="*"
easydict="*"
dashscope="*"
torch={url = "https://mirrors.aliyun.com/pytorch-wheels/cu121/torch-2.2.0+cu121-cp312-cp312-win_amd64.whl", platform = "win32"}
transformers="*"
pyyaml="*"
google-generativeai="*"
gradio="*"
accelerate="*"
sentence-transformers="*"
llama-index-llms-huggingface="*"
llama-index-vector-stores-milvus="*"
llama-index-embeddings-huggingface="*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun-source"
url = "https://mirrors.aliyun.com/pypi/simple/"
priority = "default"


[[tool.poetry.source]]
name = "tuna-source"
url = "https://pypi.tuna.tsinghua.edu.cn/simple/"
